Fix: Corriger les proportions des drapeaux
- Suppression des attributs width et height fixes
- Utilisation de height: 16px et width: auto en CSS
- Les drapeaux gardent maintenant leurs proportions naturelles
- Plus de déformation des images

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           </button>
           <button id="langToggle" class="lang-toggle" title="Change language">
             <span class="lang-flag" data-lang="fr">
-              <img src="https://images.icon-icons.com/4023/PNG/512/fra_fr_france_flag_icon_255812.png" alt="FR" width="20" height="14" />
+              <img src="https://images.icon-icons.com/4023/PNG/512/fra_fr_france_flag_icon_255812.png" alt="FR" />
             </span>
             <span class="lang-flag hidden" data-lang="en">
-              <img src="https://images.icon-icons.com/4023/PNG/512/united_kingdom_gb_gbr_flag_icon_255824.png" alt="EN" width="20" height="14" />
+              <img src="https://images.icon-icons.com/4023/PNG/512/united_kingdom_gb_gbr_flag_icon_255824.png" alt="EN" />
             </span>
           </button>
           <a href="history.html" class="history-toggle" title="Historique" data-i18n-title="history">
